<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    tools:context=".feature.registration.presentation.RegistrationFragment">

    <TextView
        android:id="@+id/tv_enter_your_name"
        style="@style/Text.Base.Small.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_enter_your_name"
        android:textColor="@color/text_caption_dark"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.davai.uikit.KeyboardBackEditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_64"
        android:autofillHints="name"
        android:backgroundTint="@color/background_white"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:lines="1"
        android:minWidth="@dimen/dimen_80"
        android:textAppearance="@style/Text.Headline.Title"
        android:textColor="@color/text_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Артем" />

    <TextView
        android:id="@+id/tv_error_hint"
        style="@style/Text.Base.Small.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        tools:text="@string/registration_enter_name" />

    <com.davai.uikit.ProgressBarView
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/dimen_80"
        android:layout_height="@dimen/dimen_80"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        style="@style/Text.Base.Button.Regular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64"
        android:backgroundTint="@color/primary_base"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/registration_enter"
        android:textColor="@color/text_light"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>