<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="@dimen/drag_handle_width"
        android:layout_height="@dimen/drag_handle_height"
        android:background="@drawable/drag_handle_background"
        android:layout_marginTop="@dimen/drag_handle_margin_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_enter_your_name"
        android:layout_marginTop="@dimen/padding_137"
        style="@style/Text.Base.Small.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_enter_your_name"
        android:textColor="@color/text_caption_dark"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.davai.uikit.ImeBackEditText
        android:id="@+id/et_name"
        style="@style/BigTextEditText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_64"
        android:autofillHints="name"
        android:backgroundTint="@color/background_white"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:lines="1"
        android:minWidth="@dimen/dimen_80"
        android:textColor="@color/text_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Артем" />

    <TextView
        android:id="@+id/tv_error_hint"
        style="@style/Text.Base.Small.Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/error"
        android:paddingBottom="@dimen/padding_131"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        tools:text="@string/registration_enter_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        style="@style/Text.Base.Button.Regular"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_64"
        android:backgroundTint="@color/primary_base"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/change_name_enter"
        android:textColor="@color/text_light"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

