<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="@color/background_white"
        app:cardCornerRadius="@dimen/card_radius_24"
        app:strokeColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_select_movie_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/select_movies_cover_image_description"
                app:layout_constraintBottom_toTopOf="@id/gl_image_info_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic[8]" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/iv_select_movie_cover"
                app:layout_constraintEnd_toEndOf="@id/iv_select_movie_cover"
                app:layout_constraintStart_toStartOf="@id/iv_select_movie_cover"
                app:layout_constraintTop_toTopOf="@id/iv_select_movie_cover" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background_gradient_transparent_to_white"
                app:layout_constraintBottom_toTopOf="@id/gl_image_info_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_image_info_border"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/tv_film_title"
                style="@style/Text.Headline.Title.NoLineSpacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginBottom="@dimen/padding_12"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintBottom_toTopOf="@+id/tv_mark_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="[Приговоренный к смерти бежал или Дух веет где хочет]" />

            <TextView
                android:id="@+id/tv_mark_value"
                style="@style/Text.Base.Medium.Bold.NoLineSpacing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_8"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_year_country_runtime"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="[9.1]" />

            <TextView
                android:id="@+id/tv_original_title"
                style="@style/Text.Base.Medium.Regular.NoLineSpacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_16"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/text_base"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_mark_value"
                app:layout_constraintTop_toTopOf="@+id/tv_mark_value"
                tools:text="[Un condamné à mort s'est échappé ou Le vent souffle où il veut]" />

            <TextView
                android:id="@+id/tv_year_country_runtime"
                style="@style/Text.Base.Small.Regular.NoLineSpacing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:maxLines="2"
                android:textColor="@color/text_base"
                app:layout_constraintBottom_toTopOf="@+id/fbl_genre_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="[1956 год ∙ Испания, Великобритания, Германия, Франция... ∙ 1 ч 32 мин]" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fbl_genre_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_4"
                app:flexWrap="wrap"
                app:justifyContent="flex_start"
                app:layout_constraintBottom_toTopOf="@+id/civ_skip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.davai.uikit.ConditionedImageView
                android:id="@+id/civ_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24"
                android:contentDescription="@string/select_movies_skip_icon_description"
                app:baseConditionImageId="@drawable/ic_skip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:secondConditionImageId="@drawable/ic_skip_filled" />

            <com.davai.uikit.ConditionedImageView
                android:id="@+id/civ_revert"
                android:layout_width="@dimen/small_icon_size_40"
                android:layout_height="wrap_content"
                android:contentDescription="@string/select_movies_revert_icon_description"
                app:baseConditionImageId="@drawable/ic_revert"
                app:layout_constraintBottom_toBottomOf="@id/civ_skip"
                app:layout_constraintEnd_toEndOf="@id/civ_like"
                app:layout_constraintStart_toStartOf="@id/civ_skip"
                app:layout_constraintTop_toTopOf="@id/civ_skip"
                app:secondConditionImageId="@drawable/ic_revert_filled" />

            <com.davai.uikit.ConditionedImageView
                android:id="@+id/civ_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24"
                android:contentDescription="@string/select_movies_like_icon_description"
                app:baseConditionImageId="@drawable/ic_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:secondConditionImageId="@drawable/ic_like_filled" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>